<!--
  ~ Copyright 2021 Lee Woochan <dncks1525@gmail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">MyLibrary</string>
    <string name="sample">Sample</string>

    <string name="transition_cover_img">transition coverImg</string>
    <string name="transition_quick_search">transition quickSearch</string>

    <string name="common_retry">retry</string>
    <string name="common_no_contents_found">No contents found</string>
    <string name="common_recent_books">Recent Books</string>

    <string name="search_hint">Search Book</string>

    <string name="book_page">p</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_language">Language</string>
    <string name="book_year">Year</string>
    <string name="book_isbn10">ISBN10</string>
    <string name="book_isbn13">ISBN13</string>
    <string name="book_buy">%1$s BUY</string>
    <string name="book_describe">Describe</string>
    <string name="book_pdf">PDF</string>

</resources>
